--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </div>
 
         <footer>
-            <p>Designed by : Sondos - 2024</p>
-            <p><a href="mailto:hege@example.com">hege@example.com</a></p>
+            <p>Deirected by : Women's Voice Team - 2024</p>
+            <p><a href="mailto:equilvoicescollective@gmail.com">equilvoicescollective@gmail.com</a></p>
         </footer>
 
         
